resources/assets/sass/app.scss
// Fonts
@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Noto+Serif|Noto+Serif:400,400i,700,700i|Nunito:900');

// Variables
@import "variables";

// Bootstrap
@import '~bootstrap/scss/bootstrap';

html {
    min-height: 100%;
}

.bg-krlx-gradient {
    background: $krlx-red;
    background: linear-gradient(135deg, $krlx-red-dark 40%, $krlx-red-light 90%);
}

.bg-gray {
    background: $gray-200;
}

.card-auth {
    border-top: 2.5px solid $krlx-red-light;
}

h1, h2, h3, h4, h5, h6 {
    &:not(.head-sans-serif) {
        font-family: "Noto Serif", serif;
    }
}

.page-footer {
    border-top: 0.2em solid $krlx-red;
}

.has-page-foot {
    margin-bottom: 60px;
}

.mc-toolbar-footer {
    background: white;
    box-shadow: 0px -2px 5px 0px;
    position: fixed;
    bottom: 0;
    width: 100%;

    .container {
        margin-top: 0.5rem;
        margin-bottom: 0.5rem;
    }
}

.font-serif {
    font-family: "Noto Serif", serif;
}

.hide-mobile {
    @include media-breakpoint-down(xs) {
        display: none;
    }
}

.new-participant-suggestions {
    height: 300px;
    overflow-y: scroll;
}

.landing-card {
    position: relative;
    overflow: hidden;
    color: white;
    height: 200px;
    background-color: #666;

    img {
        position: absolute;
        top: 0;
        bottom: 0;
        margin: auto;
        width: 100%;
        z-index: 10;
        object-fit: cover;
    }

    .alert {
        z-index: 20;
        position: absolute;
        top: 0;
    }

    .landing-headline {
        z-index: 20;
        position: absolute;
        bottom: 0;
    }

    @include media-breakpoint-up(md) {
        height: 400px;
    }

    .btn {
        text-transform: uppercase;
    }

    h1 {
        font-family: "Nunito", sans-serif;
        -webkit-text-stroke: 2px black;
        line-height: 1em;
        margin-bottom: 0;
        @include media-breakpoint-up(md) {
            font-size: 500%;
        }
    }

    h2 {
        @include media-breakpoint-down(sm) {
            font-size: 100%;
        }
    }
}

.bg-krlx-red {
    background: $krlx-red;
}

.bg-black {
    background: black;
    color: white;
}

span.onair-now {
    font-size: 150%;
}

span.text-smallcaps {
    font-variant: small-caps;
}

